button alignment of content corrected

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -192,10 +192,10 @@ $xlarge-desktop-width: 1500px;
     border: 1px solid #d56d05c7;
     box-shadow: 2px 4px 6px 0px #592b15;
     background-color:#010b20e6;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //align-content: center;
+    //justify-content: center;
     
 }
 
@@ -207,10 +207,10 @@ $xlarge-desktop-width: 1500px;
     border: 1px solid #d56d05c7;
     box-shadow: 2px 4px 6px 0px #592b15;
     background-color: #010b20e6;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //align-content: center;
+    //justify-content: center;
     
 }
 
@@ -222,10 +222,10 @@ $xlarge-desktop-width: 1500px;
     border: 1px solid #d56d05c7;
     box-shadow: 2px 4px 6px 0px #592b15;
     background-color: #010b20e6;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //align-content: center;
+    //justify-content: center;
 }
 
 
